--- a/css/button-mobile.css
+++ b/css/button-mobile.css
@@ -143,7 +143,7 @@
   border: 0;
   box-shadow: none;
   background-color: hsl(212, 95%, 44%);
-  )outline: 0;
+  outline: 0;
   color: white;
 }
 
@@ -197,6 +197,10 @@
   border: 0;
 }
 
+.topcoat-button--cta:focus {
+  outline: 0;
+}
+
 /* topdoc
   name: Quiet Button
   description: A simple, yet quiet button
@@ -216,15 +220,18 @@
     - quiet
 */
 
+.topcoat-button--quiet {
+  border: 0;
+}
+
 .topcoat-button--quiet:hover {
   text-shadow: none;
   box-shadow: 0 0 0 2px hsl(0, 0%, 31%) inset;
+  background-color: hsl(0, 0%, 29%);
 }
 
 .topcoat-button--quiet:active {
-  color: hsl(0, 0%, 31%);
   text-shadow: none;
   background-color: hsla(210, 2%, 25%, 1);
-  border: 0;
-  box-shadow: inset 0 2px hsla(0, 0%, 0%, .05);
+  box-shadow: 0 0 0 2px hsl(0, 0%, 31%) inset;
 }
