--- a/components/tab-bar.css
+++ b/components/tab-bar.css
@@ -37,10 +37,16 @@
 
 .tab-bar__item {
   @extend: %button-bar__item;
+  position: relative;
 }
 
 .tab-bar__item > input {
   @extend: %button-bar__item__input;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
 
 .tab-bar__button {
