--- a/css/tab-bar-mobile.css
+++ b/css/tab-bar-mobile.css
@@ -117,6 +117,18 @@
     - bar
 */
 
+.topcoat-tab-bar__item {
+  position: relative;
+}
+
+.topcoat-tab-bar__item > input {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
 .topcoat-tab-bar__button {
   padding: .625rem 0;
   margin: 0 2rem;
