--- a/css/tab-bar-mobile.css
+++ b/css/tab-bar-mobile.css
@@ -79,6 +79,15 @@
 .topcoat-tab-bar__item {
   width: auto;
   border-radius: 0;
+  position: relative;
+}
+
+.topcoat-tab-bar__item > input {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  margin: 0;
 }
 
 .topcoat-tab-bar__button {
@@ -105,6 +114,18 @@
         <button class="topcoat-tab-bar__button">Three</button>
       </label>
     </div>
+    <br>
+    <div class="topcoat-tab-bar">
+      <label class="topcoat-tab-bar__item">
+        <button class="topcoat-tab-bar__button">One</button>
+      </label>
+      <label class="topcoat-tab-bar__item">
+        <button class="topcoat-tab-bar__button">Two</button>
+      </label>
+      <label class="topcoat-tab-bar__item">
+        <button class="topcoat-tab-bar__button">Three</button>
+      </label>
+    </div>
   examples:
     mobile tab bar: http://codepen.io/Topcoat/pen/rJICF
   tags:
@@ -117,38 +138,54 @@
     - bar
 */
 
-.topcoat-tab-bar__item {
-  position: relative;
-}
-
 .topcoat-tab-bar__item > input {
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  z-index: 2;
 }
 
 .topcoat-tab-bar__button {
-  padding: .625rem 0;
-  margin: 0 2rem;
+  padding: .625rem 4rem;
   min-height: 1.313rem;
   line-height: 1.313rem;
   letter-spacing: 0;
   color: hsl(0, 0%, 31%);
   text-shadow: none;
   vertical-align: top;
+  background-color: white;
+  box-shadow: 0 0 0 2px hsl(0, 0%, 31%) inset;
+  border-top: 0;
 }
 
 .topcoat-tab-bar__button:active,
-.topcoat-tab-bar__button--large:active,
-:checked + .topcoat-tab-bar__button {
+:checked + .topcoat-tab-bar__button,
+:active + .topcoat-tab-bar__button {
   color: hsl(212, 79%, 49%);
-  border-bottom: 2px solid;
+  background-color: transparent;
+  box-shadow: inset 0 0 2px;
 }
 
 .topcoat-tab-bar__button:focus,
-.topcoat-tab-bar__button--large:focus {
+:focus + .topcoat-tab-bar__button {
   z-index: 1;
+  box-shadow: none, none;
   outline: 0;
+}
+
+.topcoat-tab-bar__button {
+  background: transparent;
+  box-shadow: none;
+  padding: .625rem 0;
+  margin: 0 2rem;
+  border-bottom: 2px solid transparent;
+}
+
+.topcoat-tab-bar__button:active,
+:checked + .topcoat-tab-bar__button,
+:active + .topcoat-tab-bar__button {
+  border-bottom: 2px solid;
+  box-shadow: none;
+}
+
+.topcoat-tab-bar__button:focus,
+:focus + .topcoat-tab-bar__button {
+  box-shadow: none;
 }
