--- a/css/tab-bar-mobile.css
+++ b/css/tab-bar-mobile.css
@@ -15,7 +15,8 @@
   font-weight: 600;
 }
 
-.topcoat-tab-bar__button {
+.topcoat-tab-bar__button,
+.topcoat-tab-bar__button--selected {
   padding: 0;
   margin: 0;
   font: inherit;
@@ -35,7 +36,8 @@
   outline: none;
 }
 
-.topcoat-tab-bar__button {
+.topcoat-tab-bar__button,
+.topcoat-tab-bar__button--selected {
   cursor: default;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -43,23 +45,27 @@
   user-select: none;
 }
 
-.topcoat-tab-bar__button {
+.topcoat-tab-bar__button,
+.topcoat-tab-bar__button--selected {
   box-sizing: border-box;
   background-clip: padding-box;
 }
 
-.topcoat-tab-bar__button {
+.topcoat-tab-bar__button,
+.topcoat-tab-bar__button--selected {
   white-space: nowrap;
   overflow: hidden;
 }
 
-.topcoat-tab-bar__button {
+.topcoat-tab-bar__button,
+.topcoat-tab-bar__button--selected {
   position: relative;
   display: inline-block;
   vertical-align: top;
 }
 
-.topcoat-tab-bar__button {
+.topcoat-tab-bar__button,
+.topcoat-tab-bar__button--selected {
   text-overflow: ellipsis;
 }
 
@@ -90,7 +96,8 @@
   margin: 0;
 }
 
-.topcoat-tab-bar__button {
+.topcoat-tab-bar__button,
+.topcoat-tab-bar__button--selected {
   text-decoration: none;
 }
 
@@ -120,7 +127,7 @@
         <button class="topcoat-tab-bar__button">One</button>
       </label>
       <label class="topcoat-tab-bar__item">
-        <button class="topcoat-tab-bar__button">Two</button>
+        <button class="topcoat-tab-bar__button--selected">Two</button>
       </label>
       <label class="topcoat-tab-bar__item">
         <button class="topcoat-tab-bar__button">Three</button>
@@ -142,7 +149,8 @@
   z-index: 2;
 }
 
-.topcoat-tab-bar__button {
+.topcoat-tab-bar__button,
+.topcoat-tab-bar__button--selected {
   padding: .625rem 4rem;
   min-height: 1.313rem;
   line-height: 1.313rem;
@@ -156,6 +164,7 @@
 }
 
 .topcoat-tab-bar__button:active,
+.topcoat-tab-bar__button--selected,
 :checked + .topcoat-tab-bar__button,
 :active + .topcoat-tab-bar__button {
   color: hsl(212, 79%, 49%);
@@ -170,7 +179,8 @@
   outline: 0;
 }
 
-.topcoat-tab-bar__button {
+.topcoat-tab-bar__button,
+.topcoat-tab-bar__button--selected {
   background: transparent;
   box-shadow: none;
   padding: .625rem 0;
@@ -179,6 +189,7 @@
 }
 
 .topcoat-tab-bar__button:active,
+.topcoat-tab-bar__button--selected,
 :checked + .topcoat-tab-bar__button,
 :active + .topcoat-tab-bar__button {
   border-bottom: 2px solid;
