--- a/components/combobox.css
+++ b/components/combobox.css
@@ -1,9 +1,11 @@
+@import "./select";
+
 /* topdoc
   name: Combobox
   description: A combobox
   markup:
     <div class="topcoat-combobox__container">
-      <input type="text" class="topcoat-text-input"/>
+      <input type="text" class="topcoat-combobox__select" placeholder="Type Here"/>
       <div class="topcoat-combobox__suggestions-container">
         <ul class="topcoat-list__container">
           <li="topcoat-list__item">Preact</li>
@@ -19,3 +21,36 @@
     - mobile
     - button
 */
+.combobox__select {
+  border: 1px solid #eaeaea;
+  border-radius: 5.5px;
+  font-size: 1rem;
+  height: 44px;
+  box-sizing: border-box;
+  padding: 0 0 0 1rem;
+  line-height: 1rem;
+}
+.combobox__container {
+  display: inline-block;
+  position: relative;
+}
+.combobox__container:after {
+  content: '';
+  width: 44px;
+  height: 44px;
+  border: 1px solid #eaeaea;
+  border-radius: 0 5.5px 5.5px 0;
+  position: absolute;
+  z-index: 10;
+  right: 0;
+  top: 0;
+  box-sizing: border-box;
+  background: url(img/dropdown.svg) no-repeat center;
+  background-size: 20px 12px;
+}
+.combobox__select::placeholder {
+  font-style: italic;
+}
+.combobox__suggestions-container {
+  position: absolute;
+}
