--- a/components/select.css
+++ b/components/select.css
@@ -1,30 +1,4 @@
 @import "topcoat-select-base";
-/* topdoc
-  name: Topcoat Select
-  description: A component that lets you select things
-  modifiers:
-    :disabled: Disabled state
-    :focus: Focused
-    :invalid: Hover state
-  markup:
-    <select class="topcoat-select">
-      <option value="volvo">Volvo</option>
-      <option value="saab">Saab</option>
-      <option value="mercedes">Mercedes</option>
-      <option value="audi">Audi</option>
-    </select>
-    <select class="topcoat-select" disabled>
-      <option value="volvo">Volvo</option>
-      <option value="saab">Saab</option>
-      <option value="mercedes">Mercedes</option>
-      <option value="audi">Audi</option>
-    </select>
-  tags:
-    - desktop
-    - mobile
-    - text
-    - input
-*/
 .select {
   @extend: %select;
   user-select: none;
@@ -43,7 +17,7 @@
   background-color: var(--background-color);
   box-shadow: var(--box-shadow);
   border: var(--border);
-  background-image: url('../img/dropdown.svg');
+  background-image: url('img/dropdown.svg');
   background-repeat: no-repeat;
   background-position: center right;
   min-width: 3.4rem;
