--- a/css/combobox-mobile.css
+++ b/css/combobox-mobile.css
@@ -64,33 +64,6 @@
   display: none;
 }
 
-/* topdoc
-  name: Topcoat Select
-  description: A component that lets you select things
-  modifiers:
-    :disabled: Disabled state
-    :focus: Focused
-    :invalid: Hover state
-  markup:
-    <select class="topcoat-select">
-      <option value="volvo">Volvo</option>
-      <option value="saab">Saab</option>
-      <option value="mercedes">Mercedes</option>
-      <option value="audi">Audi</option>
-    </select>
-    <select class="topcoat-select" disabled>
-      <option value="volvo">Volvo</option>
-      <option value="saab">Saab</option>
-      <option value="mercedes">Mercedes</option>
-      <option value="audi">Audi</option>
-    </select>
-  tags:
-    - desktop
-    - mobile
-    - text
-    - input
-*/
-
 .topcoat-select {
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -111,7 +84,7 @@
   background-color: white;
   box-shadow: 0 0 0 2px hsl(0, 0%, 31%) inset;
   border: 0;
-  background-image: url('../img/dropdown.svg');
+  background-image: url('img/dropdown.svg');
   background-repeat: no-repeat;
   background-position: center right;
   min-width: 3.4rem;
@@ -130,4 +103,76 @@
   border: 0;
   box-shadow: none;
   outline: 0;
+}
+
+/* topdoc
+  name: Combobox
+  description: A combobox
+  markup:
+    <div class="topcoat-combobox__container">
+      <input type="text" class="topcoat-combobox__select" placeholder="Type Here"/>
+      <div class="topcoat-combobox__suggestions-container">
+        <ul class="topcoat-list__container">
+          <li="topcoat-list__item">Preact</li>
+          <li="topcoat-list__item">React</li>
+        </ul>
+      </div>
+    </div>
+  examples:
+    mobile button: http://codepen.io/Topcoat/pen/DpKtf
+  tags:
+    - desktop
+    - light
+    - mobile
+    - button
+*/
+
+.topcoat-combobox__select {
+  border: 1px solid #eaeaea;
+  border-radius: 5.5px;
+  font-size: 1rem;
+  height: 44px;
+  box-sizing: border-box;
+  padding: 0 0 0 1rem;
+  line-height: 1rem;
+}
+
+.topcoat-combobox__container {
+  display: inline-block;
+  position: relative;
+}
+
+.topcoat-combobox__container:after {
+  content: '';
+  width: 44px;
+  height: 44px;
+  border: 1px solid #eaeaea;
+  border-radius: 0 5.5px 5.5px 0;
+  position: absolute;
+  z-index: 10;
+  right: 0;
+  top: 0;
+  box-sizing: border-box;
+  background: url(img/dropdown.svg) no-repeat center;
+  background-size: 20px 12px;
+}
+
+.topcoat-combobox__select::-webkit-input-placeholder {
+  font-style: italic;
+}
+
+.topcoat-combobox__select::-moz-placeholder {
+  font-style: italic;
+}
+
+.topcoat-combobox__select:-ms-input-placeholder {
+  font-style: italic;
+}
+
+.topcoat-combobox__select::placeholder {
+  font-style: italic;
+}
+
+.topcoat-combobox__suggestions-container {
+  position: absolute;
 }
