--- a/docs/css/button-mobile.css
+++ b/docs/css/button-mobile.css
@@ -15,6 +15,30 @@
   font-weight: 600;
 }
 
+html {
+  font-size: 18px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Source Sans Pro",
+                 "HelveticaNeue-Light",
+                 "Helvetica Neue Light",
+                 "Helvetica Neue",
+                 Helvetica,
+                 Arial,
+                 "Lucida Grande",
+                 sans-serif;
+  font-weight: 600;
+  background: hsla(200, 2%, 30%, 1);
+}
+
+:focus {
+  outline-color: transparent;
+  outline-style: none;
+}
+
 .topcoat-button,
 .topcoat-button--cta,
 .topcoat-button--quiet {
