--- a/css/button-mobile.css
+++ b/css/button-mobile.css
@@ -1,44 +1,3 @@
-@font-face {
-  font-family: "Source Sans Pro";
-  src: url('../font/SourceSansPro-Regular.otf');
-}
-
-@font-face {
-  font-family: "Source Sans Pro";
-  src: url('../font/SourceSansPro-Light.otf');
-  font-weight: 200;
-}
-
-@font-face {
-  font-family: "Source Sans Pro";
-  src: url('../font/SourceSansPro-Semibold.otf');
-  font-weight: 600;
-}
-
-html {
-  font-size: 18px;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Source Sans Pro",
-                 "HelveticaNeue-Light",
-                 "Helvetica Neue Light",
-                 "Helvetica Neue",
-                 Helvetica,
-                 Arial,
-                 "Lucida Grande",
-                 sans-serif;
-  font-weight: 600;
-  background: hsla(200, 2%, 30%, 1);
-}
-
-:focus {
-  outline-color: transparent;
-  outline-style: none;
-}
-
 .topcoat-button,
 .topcoat-button--cta,
 .topcoat-button--quiet {
@@ -134,7 +93,7 @@ body {
   font-weight: 600;
   line-height: 1.313rem;
   letter-spacing: 0;
-  color: hsl(0, 0%, 31%);
+  color: #505050;
   text-shadow: none;
   vertical-align: top;
   border-radius: 22.5px;
@@ -143,7 +102,7 @@ body {
 .topcoat-button,
 .topcoat-button--cta {
   background-color: white;
-  box-shadow: 0 0 0 2px hsl(0, 0%, 31%) inset;
+  box-shadow: 0 0 0 2px #505050 inset;
   border: 0;
 }
 
@@ -203,7 +162,7 @@ body {
   background-color: hsl(212, 79%, 49%);
   box-shadow: none;
   color: white;
-  font-weight: 600;
+  font-weight: normal;
   text-shadow: none;
 }
 
@@ -250,12 +209,12 @@ body {
 
 .topcoat-button--quiet:hover {
   text-shadow: none;
-  box-shadow: 0 0 0 2px hsl(0, 0%, 31%) inset;
+  box-shadow: 0 0 0 2px #505050 inset;
   background-color: hsl(0, 0%, 29%);
 }
 
 .topcoat-button--quiet:active {
   text-shadow: none;
   background-color: hsla(210, 2%, 25%, 1);
-  box-shadow: 0 0 0 2px hsl(0, 0%, 31%) inset;
+  box-shadow: 0 0 0 2px #505050 inset;
 }
