--- a/css/tab-bar-mobile.css
+++ b/css/tab-bar-mobile.css
@@ -1,44 +1,3 @@
-@font-face {
-  font-family: "Source Sans Pro";
-  src: url('../font/SourceSansPro-Regular.otf');
-}
-
-@font-face {
-  font-family: "Source Sans Pro";
-  src: url('../font/SourceSansPro-Light.otf');
-  font-weight: 200;
-}
-
-@font-face {
-  font-family: "Source Sans Pro";
-  src: url('../font/SourceSansPro-Semibold.otf');
-  font-weight: 600;
-}
-
-html {
-  font-size: 18px;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Source Sans Pro",
-                 "HelveticaNeue-Light",
-                 "Helvetica Neue Light",
-                 "Helvetica Neue",
-                 Helvetica,
-                 Arial,
-                 "Lucida Grande",
-                 sans-serif;
-  font-weight: 600;
-  background: hsla(200, 2%, 30%, 1);
-}
-
-:focus {
-  outline-color: transparent;
-  outline-style: none;
-}
-
 .topcoat-tab-bar__button,
 .topcoat-tab-bar__button--selected {
   padding: 0;
@@ -179,11 +138,11 @@ body {
   min-height: 1.313rem;
   line-height: 1.313rem;
   letter-spacing: 0;
-  color: hsl(0, 0%, 31%);
+  color: #505050;
   text-shadow: none;
   vertical-align: top;
   background-color: white;
-  box-shadow: 0 0 0 2px hsl(0, 0%, 31%) inset;
+  box-shadow: 0 0 0 2px #505050 inset;
   border-top: 0;
 }
 
