--- a/docs/css/combobox-mobile.css
+++ b/docs/css/combobox-mobile.css
@@ -1,44 +1,3 @@
-@font-face {
-  font-family: "Source Sans Pro";
-  src: url('../font/SourceSansPro-Regular.otf');
-}
-
-@font-face {
-  font-family: "Source Sans Pro";
-  src: url('../font/SourceSansPro-Light.otf');
-  font-weight: 200;
-}
-
-@font-face {
-  font-family: "Source Sans Pro";
-  src: url('../font/SourceSansPro-Semibold.otf');
-  font-weight: 600;
-}
-
-html {
-  font-size: 18px;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Source Sans Pro",
-                 "HelveticaNeue-Light",
-                 "Helvetica Neue Light",
-                 "Helvetica Neue",
-                 Helvetica,
-                 Arial,
-                 "Lucida Grande",
-                 sans-serif;
-  font-weight: 600;
-  background: hsla(200, 2%, 30%, 1);
-}
-
-:focus {
-  outline-color: transparent;
-  outline-style: none;
-}
-
 .topcoat-select {
   padding: 0;
   margin: 0;
@@ -98,15 +57,15 @@ body {
   text-overflow: '';
   padding: .625rem 4rem;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: normal;
   line-height: 1.313rem;
   letter-spacing: 0;
-  color: hsl(0, 0%, 31%);
+  color: #505050;
   text-shadow: none;
   vertical-align: top;
   border-radius: 22.5px;
   background-color: white;
-  box-shadow: 0 0 0 2px hsl(0, 0%, 31%) inset;
+  box-shadow: 0 0 0 2px #505050 inset;
   border: 0;
   background-image: url('img/dropdown.svg');
   background-repeat: no-repeat;
@@ -154,11 +113,13 @@ body {
 .topcoat-combobox__select {
   border: 1px solid #eaeaea;
   border-radius: 5.5px;
-  font-size: 1rem;
+  font-size: .777777778rem;
+  font-weight: normal;
   height: 44px;
   box-sizing: border-box;
-  padding: 0 0 0 1rem;
-  line-height: 1rem;
+  padding: 0 0 0 .666666667rem;
+  line-height: .777777778rem;
+  color: #505050;
 }
 
 .topcoat-combobox__container {
@@ -183,18 +144,22 @@ body {
 
 .topcoat-combobox__select::-webkit-input-placeholder {
   font-style: italic;
+  font-weight: 200;
 }
 
 .topcoat-combobox__select::-moz-placeholder {
   font-style: italic;
+  font-weight: 200;
 }
 
 .topcoat-combobox__select:-ms-input-placeholder {
   font-style: italic;
+  font-weight: 200;
 }
 
 .topcoat-combobox__select::placeholder {
   font-style: italic;
+  font-weight: 200;
 }
 
 .topcoat-combobox__suggestions-container {
