--- a/components/combobox.css
+++ b/components/combobox.css
@@ -8,8 +8,8 @@
       <input type="text" class="topcoat-combobox__select" placeholder="Type Here"/>
       <div class="topcoat-combobox__suggestions-container">
         <ul class="topcoat-list__container">
-          <li="topcoat-list__item">Preact</li>
-          <li="topcoat-list__item">React</li>
+          <li class="topcoat-list__item">Preact</li>
+          <li class="topcoat-list__item">React</li>
         </ul>
       </div>
     </div>
@@ -31,6 +31,8 @@
   padding: 0 44px 0 .666666667rem;
   line-height: .777777778rem;
   color: var(--color);
+  z-index: 2;
+  position: relative;
 }
 .combobox__container {
   display: inline-block;
@@ -56,4 +58,27 @@
 }
 .combobox__suggestions-container {
   position: absolute;
+  background: var(--background-color);
+  box-sizing: border-box;
+  width: calc(100% - 43px);
+  border: 1px solid #eaeaea;
+  border-radius: 0 0 5.5px 5.5px;
+  top: 39px;
+}
+.combobox__suggestions-container ul {
+  margin: 0;
+  list-style: none;
+  padding: 4px 0 0 0;
+}
+.combobox__suggestions-container li {
+  font-size: .777777778rem;
+  font-weight: normal;
+  box-sizing: border-box;
+  padding: .444444444rem .666666667rem;
+  line-height: .777777778rem;
+  color: var(--color);
+  cursor: pointer;
+}
+.combobox__suggestions-container li:hover {
+  background: hsl(0, 0%, 96%);
 }
