--- a/css/tab-bar-mobile.css
+++ b/css/tab-bar-mobile.css
@@ -162,13 +162,25 @@
   outline: 0;
 }
 
+.topcoat-tab-bar {
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.topcoat-tab-bar__item {
+  font-size: .722222222rem;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  text-align: center;
+}
+
 .topcoat-tab-bar__button,
 .topcoat-tab-bar__button--selected {
   background: transparent;
   box-shadow: none;
   padding: .625rem 0;
-  margin: 0 2rem;
   border-bottom: 2px solid transparent;
+  text-transform: uppercase;
 }
 
 .topcoat-tab-bar__button:active,
@@ -177,6 +189,7 @@
 :active + .topcoat-tab-bar__button {
   border-bottom: 2px solid;
   box-shadow: none;
+  width: 100%;
 }
 
 .topcoat-tab-bar__button:focus,
