--- a/docs/css/tab-bar-mobile.css
+++ b/docs/css/tab-bar-mobile.css
@@ -165,6 +165,7 @@
 .topcoat-tab-bar {
   display: -ms-flexbox;
   display: flex;
+  box-shadow: inset 0 -1px hsl(217, 22%, 93%);
 }
 
 .topcoat-tab-bar__item {
