--- a/variables/mobile.css
+++ b/variables/mobile.css
@@ -1,5 +1,6 @@
 :root {
   --base-font-size: 18px;
+  --font-size: 1rem;
   --button-font-size: 1rem;
   --font-weight: normal;
   --color: #505050;
