--- a/css/button-mobile.css
+++ b/css/button-mobile.css
@@ -109,13 +109,13 @@
 .topcoat-button:hover,
 .topcoat-button--cta:hover,
 .topcoat-button--quiet:hover {
-  background-color: hsl(0, 0%, 29%);
+  background-color: hsl(113, 0%, 31%);
   color: white;
 }
 
 .topcoat-button:active,
 .topcoat-button--cta:active {
-  background-color: hsla(210, 2%, 25%, 1);
+  background-color: hsl(113, 0%, 20%);
   box-shadow: inset 0 2px hsla(0, 0%, 0%, .05);
   color: white;
 }
@@ -123,9 +123,9 @@
 .topcoat-button:focus,
 .topcoat-button--cta:focus,
 .topcoat-button--quiet:focus {
-  border: 0;
-  box-shadow: none;
-  background-color: hsl(212, 95%, 44%);
+  background-color: hsl(113, 0%, 20%);
+  box-shadow: inset 0 2px hsla(0, 0%, 0%, .05);
+  color: white;
   outline: 0;
   color: white;
 }
@@ -181,6 +181,8 @@
 }
 
 .topcoat-button--cta:focus {
+  background-color: hsl(211, 94%, 38%);
+  border: 0;
   outline: 0;
 }
 
@@ -205,16 +207,20 @@
 
 .topcoat-button--quiet {
   border: 0;
+  box-shadow: none;
 }
 
 .topcoat-button--quiet:hover {
   text-shadow: none;
-  box-shadow: 0 0 0 2px #505050 inset;
-  background-color: hsl(0, 0%, 29%);
+  box-shadow: none;
+  background-color: hsl(113, 0%, 96%);
+  color: #505050;
 }
 
-.topcoat-button--quiet:active {
+.topcoat-button--quiet:active,
+.topcoat-button--quiet:focus {
   text-shadow: none;
-  background-color: hsla(210, 2%, 25%, 1);
-  box-shadow: 0 0 0 2px #505050 inset;
+  background-color: #eaeaea;
+  box-shadow: none;
+  color: #505050;
 }
