--- a/variables/mobile.css
+++ b/variables/mobile.css
@@ -5,18 +5,23 @@
   --font-weight: normal;
   --color: #505050;
   --color--hover: white;
+  --color--hover--quiet: #505050;
   --padding: .625rem 4rem;
   --text-shadow: none;
   --border-radius: 22.5px;
   --background--body: white;
   --background-color: white;
-  --background-color--hover: hsl(0, 0%, 29%);
+  --background-color--hover: hsl(113, 0%, 96%);
   --background-color--disabled: hsl(0, 0%, 91.8%);
   --background-color--focus: hsl(212, 95%, 44%);
+  --background-color--down: hsl(113, 0%, 20%);
+  --background-color--down--active: #eaeaea;
   --color--disabled: hsl(0, 0%, 76.1%);
   --border-thickness : 2px;
   --box-shadow: 0 0 0 var(--border-thickness) var(--color) inset;
+  --box-shadow--quiet: none;
   --box-shadow--disabled: none;
+
 
   --border: 0;
   --border--disabled: var(--border-thickness) solid var(--background-color--disabled);
